--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
+  firebase_auth: ^4.16.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +71,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/Images
+    - assets/Images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
